apps/tierhive/pocket-id/app-url-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocket-id
  namespace: identity
spec:
  template:
    spec:
      containers:
        - name: pocket-id
